// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'contains backtick (1) - delimiter is …' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum do\\\`or sit amet consectetur
        adipiscing elit proin ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'contains backtick (2) - delimiter is …' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum do\\\`or sit amet consectetur
        adipiscing elit proin ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'contains backtick (3) - delimiter is …' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum do\\\`or sit amet consectetur
        adipiscing elit proin ex massa hendrerit eu posuere\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'contains double quote (1) - delimiter…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div class={'lorem ipsum do"or sit amet'}>
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'contains double quote (2) - delimiter…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div class={'lorem ipsum do"or sit amet'}>
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'contains double quote (3) - delimiter…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div class={'lorem ipsum do"or sit amet'}>
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'contains single quote (1) - delimiter…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div class={"lorem ipsum do'or sit amet"}>
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'contains single quote (2) - delimiter…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div class={"lorem ipsum do'or sit amet"}>
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'contains single quote (3) - delimiter…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div class={"lorem ipsum do'or sit amet"}>
      <slot />
    </div>
  </div>
</div>
"
`;
